tests/errors/types.vibe
def sub_mismatch
  1 - "hello"
end

def mul_mismatch
  1 * "hello"
end

def div_mismatch
  1 / "hello"
end

def unary_mismatch
  -"hello"
end

def arg_type_mismatch(n: int)
  n
end

def return_type_mismatch -> int
  "hello"
end
